crates/nuff_python_parser/src/snapshots/nuff_python_parser__string__tests__parse_fstring_self_doc_trailing_space.snap
---
source: crates/nuff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            node_index: NodeIndex(None),
            range: 0..10,
            value: FString(
                ExprFString {
                    node_index: NodeIndex(None),
                    range: 0..10,
                    value: FStringValue {
                        inner: Single(
                            FString {
                                range: 0..10,
                                node_index: NodeIndex(None),
                                elements: [
                                    Interpolation(
                                        InterpolatedElement {
                                            range: 2..9,
                                            node_index: NodeIndex(None),
                                            expression: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 3..4,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                            debug_text: Some(
                                                DebugText {
                                                    leading: "",
                                                    expression: "x",
                                                    trailing: "=   ",
                                                },
                                            ),
                                            conversion: None,
                                            format_spec: None,
                                        },
                                    ),
                                ],
                                flags: FStringFlags {
                                    quote_style: Double,
                                    prefix: Regular,
                                    triple_quoted: false,
                                    unclosed: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
